added odes notebooks

--- a/build
+++ b/build
@@ -1,4 +1,9 @@
 #!/bin/bash
 
-pandoc -o stability.pdf stability.txt
+pandoc \
+  --table-of-contents \
+  -o stability.pdf stability.txt
 
+pandoc \
+  --table-of-contents \
+  -o odes.pdf odes.txt
