update travis config file

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,15 @@ before_install:
   - curl $CONDA > conda.sh
   - bash conda.sh -b -p $HOME/conda
   - export PATH=$HOME/conda/bin:$PATH
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update  conda
+  - conda info -a # debugging
+  - conda create -f environment.yml
+  - source activate control-engineering-with-python
 
 install:
-  - conda env update -f environment.yml
+  - true
 
 script: 
   - ./build
