test new travis CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ before_install:
   - conda info -a # debugging
   - conda env create -f environment.yml
   - source activate control-engineering-with-python
+  - mkdir tl && cd tl
+  - curl http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz > tl.tgz
+  - tar zxvf tl.tgz
+  - cd *
+  - ./install-tl
 
 install:
   - true
