minor refactor of travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: bash
 
 env:
   - CONDA=https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
+  - BINDER=https://github.com/boisgera/control-engineering-with-python
+
 
 before_install:
   - sudo apt-get --yes --force-yes install texlive-full
@@ -22,5 +24,5 @@ install:
 
 script: 
   - ./build
-  - chrome --headless https://github.com/boisgera/control-engineering-with-python
+  - chrome --headless --disable-gpu $BINDER
 
