--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,13 @@ before_install:
 install:
   - true
 
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  
+  on:
+    branch: master  
+
 script: 
   - ./build
   - chromium-browser --headless --disable-gpu $MYBINDER
