--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - source activate control-engineering-with-python
   - ./install_pandoc
   - sudo apt-get --yes --force-yes install nodejs npm
-  - npm install -g decktape
+  - sudo npm install -g decktape
 
 install:
   - ./build # generate slides and notebooks
