--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - conda env create -f environment.yml
   - source activate control-engineering-with-python
   - ./install_pandoc
-  - conda install nodejs
+  - conda install -c conda-forge nodejs
   - npm install -g decktape
 
 install:
