--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
   - conda env create -f environment.yml
   - source activate control-engineering-with-python
   - conda install -c conda-forge nodejs
+  - apt-get install build-essential
   - npm install -g --unsafe-perm hummus
   - npm install -g --unsafe-perm decktape
 
