fix gha workflow file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,34 +7,36 @@ jobs:
     defaults:
       run:
         shell: bash -l {0} 
-      steps:
+    steps:
 
-        - uses: conda-incubator/setup-miniconda@v2
-          with:
-            activate-environment: control-engineering-with-python
-            environment-file: environment.yml
+      # Activate Conda Environment
+      # ----------------------------------------------------------------------
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: control-engineering-with-python
+          environment-file: environment.yml
 
-        # Install Decktape
-        # ----------------------------------------------------------------------
-        - uses: actions/setup-node@v2
-          with:
-            node-version: '12'
-        - run: npm install -g decktape
+      # Install Decktape
+      # ----------------------------------------------------------------------
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+      - run: npm install -g decktape
 
-        # Checkout & Build
-        # ----------------------------------------------------------------------
-        - uses: actions/checkout@v2
-        - run: ./build # generate slides and notebooks
-        - run: ./build-pdf
-        
-        # Deploy to gh-pages
-        # ----------------------------------------------------------------------
-        - run: rm .gitignore
-        - name: deploy to gh-pages
-          uses: JamesIves/github-pages-deploy-action@3.7.1
-          with:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            BRANCH: gh-pages
-            FOLDER: "."
-            SINGLE_COMMIT: true
-            PRESERVE: true
+      # Checkout & Build
+      # ----------------------------------------------------------------------
+      - uses: actions/checkout@v2
+      - run: ./build # generate slides and notebooks
+      - run: ./build-pdf
+
+      # Deploy to gh-pages
+      # ----------------------------------------------------------------------
+      - run: rm .gitignore
+      - name: deploy to gh-pages
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: "."
+          SINGLE_COMMIT: true
+          PRESERVE: true
