--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,10 @@ jobs:
           activate-environment: control-engineering-with-python
           environment-file: environment.yml
 
+      # Install Latex
+      # ------------------------------------------------------------------------
+      - run: sudo apt-get install texlive-full
+
       # Install Decktape
       # ----------------------------------------------------------------------
       - uses: actions/setup-node@v2
