add apt-get update (gha)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
 
       # Install Latex
       # ------------------------------------------------------------------------
+      - run: sudo apt-get update
       - run: sudo apt-get install texlive-full
 
       # Install Decktape
