--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Activate Conda Environment
         uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: control-engineering-with-python
+          activate-environment: control
           environment-file: environment.yml
 
       - name: LaTeX Install
