🔨 tweak ci build (ffmpeg issue)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,9 @@ jobs:
           activate-environment: control
           environment-file: environment.yml
 
+      - name: Display FFMPEG Info
+        run: ffmpeg -version
+
       - name: LaTeX Install
         run: sudo apt-get update && sudo apt-get install texlive-full
 
