--- a/environment.yml
+++ b/environment.yml
@@ -10,11 +10,12 @@ dependencies:
   - autograd
   - sympy
   - matplotlib
-  - ffmpeg
   - jupyter
   - jupyterlab
   - rise
   - curl
+  - ffmpeg
+  - lxml
   - pandoc=2.17.1.1
   - pip:
     - pandoc==2.1
