--- a/JOSE/build
+++ b/JOSE/build
@@ -1,3 +1,6 @@
 #!/bin/bash
 
-pandoc -o paper.pdf --bibliography=paper.bib paper.md
+pandoc \
+  -o paper.pdf \
+  --citeproc --bibliography=paper.bib \
+  paper.md
