--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash -l {0} 
+        shell: bash -l {0}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -29,13 +29,16 @@ jobs:
       - name: Node Install
         uses: actions/setup-node@v2
         with:
-          node-version: '12'
+          node-version: "12"
 
       - name: Decktape Install
         run: npm install -g decktape
 
-      - name: Slides & Notebooks build
+      - name: Slides & Notebooks Build
         run: ./build
+
+      - name: JupyterLite Build
+        run: jupyter lite build --contents . --output-dir dist
 
       - name: PDF build
         run: ./build-pdf
