--- a/build
+++ b/build
@@ -1,15 +1,28 @@
-#!/bin/bash
+#!/usr/bin/env python
 
-./build.py intro.md
-./build.py models.md
-./build.py simulation.md
-./build.py well-posedness.md
-./build.py asymptotic.md
-./build.py LTI-models.md
-./build.py internal-dynamics.md
-./build.py IO-dynamics.md
-./build.py controllability.md
-./build.py asymptotic-stabilization.md
-./build.py optimal-control.md
-./build.py observers.md
+"""
+Parallel build of the HTML slide decks and Jupyter notebooks
+"""
 
+# Standard Python Library
+import subprocess
+import sys
+
+targets = [
+    "intro",
+    "models",
+    "simulation",
+    "well-posedness",
+    "asymptotic",
+    "LTI-models",
+    "internal-dynamics",
+    "IO-dynamics",
+    "controllability",
+    "asymptotic-stabilization",
+    "optimal-control",
+    "observers",
+]
+
+processes = [subprocess.Popen(["./build.py", f"{target}.md"]) for target in targets]
+
+sys.exit(0 if all(p.wait() == 0 for p in processes) else 1)
