--- a/pixi.toml
+++ b/pixi.toml
@@ -25,6 +25,7 @@ tqdm = ">=4.67.1,<5"
 pandoc = "2.17.1.1.*"
 jupyterlite = ">=0.5.1,<0.6"
 sympy = ">=1.13.3,<2"
+nodejs = ">=22.12.0,<22.14"
 
 [pypi-dependencies]
 pandoc = ">=2.4, <3"
