--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ authors = ["Sébastien Boisgérault <Sebastien.Boisgerault@gmail.com>"]
 channels = ["conda-forge"]
 description = "Add a short description here"
 name = "control-engineering-with-python"
-platforms = ["linux-64", "win-64", "osx-64"]
+platforms = ["linux-64", "win-64", "osx-64"] # osx-arm64 not supported by the old pandoc we are using
 version = "0.1.0"
 
 [tasks]
@@ -26,6 +26,7 @@ pandoc = "2.17.1.1.*"
 jupyterlite = ">=0.5.1,<0.6"
 sympy = ">=1.13.3,<2"
 nodejs = ">=22.12.0,<22.14"
+# decktape: not packaged on conda-forge.
 
 [pypi-dependencies]
 pandoc = ">=2.4, <3"
