--- a/pixi.toml
+++ b/pixi.toml
@@ -3,11 +3,11 @@ authors = ["Sébastien Boisgérault <Sebastien.Boisgerault@gmail.com>"]
 channels = ["conda-forge"]
 description = "Control Engineering with Python"
 name = "control-engineering-with-python"
-platforms = ["linux-64", "win-64", "osx-64"] # osx-arm64 not supported by the old pandoc we are using
+platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
 version = "0.1.0"
 
 [tasks]
-build = "python build"
+start = "jupyter lab"
 
 [dependencies]
 python = ">=3.13.1,<3.14"
@@ -18,19 +18,30 @@ scipy = ">=1.15.1,<2"
 autograd = ">=1.7.0,<2"
 matplotlib = ">=3.10.0,<4"
 jupyterlab = ">=4.3.5,<5"
+ffmpeg = ">=7.1.0,<8"
+tqdm = ">=4.67.1,<5"
+sympy = ">=1.13.3,<2"
+
+[feature.build]
+platforms = ["linux-64"]
+
+[feature.build.dependencies]
 curl = ">=8.11.1,<9"
 ffmpeg = ">=7.1.0,<8"
 lxml = ">=5.3.0,<6"
-tqdm = ">=4.67.1,<5"
 pandoc = "2.17.1.1.*"
-jupyterlite = ">=0.5.1,<0.6"
-sympy = ">=1.13.3,<2"
 nodejs = ">=22.12.0,<22.14"
-# decktape: not packaged on conda-forge.
-# texlive: core only and only available on linux
+texlive-core = "*"
 
-# TODO: make a build environment with pandoc and texlive-core, etc. 
-# Being linux-only is not a (big) issue.
+[feature.build.activation]
+scripts = ["scripts/install-decktape.sh"]
 
-[pypi-dependencies]
+[feature.build.pypi-dependencies]
 pandoc = ">=2.4, <3"
+
+[feature.build.tasks]
+build = "./build"
+clean = "rm -rf *.html *.pdf"
+
+[environments]
+build = ["build"]
