--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,32 +7,13 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -l {0}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Activate Conda Environment
-        uses: conda-incubator/setup-miniconda@v2
+      - uses: prefix-dev/setup-pixi@v0.8.1
         with:
-          activate-environment: control
-          environment-file: environment.yml
-
-      - name: Display FFMPEG Info
-        run: ffmpeg -version
-
-      - name: LaTeX Install
-        run: sudo apt-get update && sudo apt-get install texlive-full
-
-      - name: Node Install
-        uses: actions/setup-node@v2
-        with:
-          node-version: "18"
-
-      - name: Decktape Install
-        run: npm install -g decktape
+          environments: build
 
       - name: Slides & Notebooks Build
         run: ./build --pdf
