--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
           environments: build
 
       - name: Slides & Notebooks Build
-        run: pixi build --pdf
+        run: pixi run build --pdf
 
       - name: Deployment Setup
         run: rm .gitignore
