--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           environments: build
 
+      - name: LaTeX Install
+        run: sudo apt-get update && sudo apt-get install texlive-full
+  
       - name: Slides & Notebooks Build
         run: pixi run build --pdf
 
