Fix pixi cache issue (github actions)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
 
       - uses: prefix-dev/setup-pixi@v0.8.1
         with:
+          cache: false
           environments: build
 
       - name: LaTeX Install
